--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@auth0/auth0-react": "^2.2.4",
     "@heroicons/react": "^1.0.6",
     "@hookform/resolvers": "^3.3.4",
+    "@react-oauth/google": "^0.12.1",
     "@reduxjs/toolkit": "^2.2.1",
     "axios": "^1.6.7",
     "i18next": "^23.10.0",
@@ -25,6 +26,7 @@
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.50.1",
     "react-i18next": "^14.0.5",
+    "react-icons": "^5.0.1",
     "react-infinite-scroll-component": "^6.1.0",
     "react-redux": "^9.1.0",
     "react-router-dom": "^6.22.0",
